editing sql query and some layout changes

--- a/src/main/web/angular/src/app/person-list/person-list.component.html
+++ b/src/main/web/angular/src/app/person-list/person-list.component.html
@@ -5,6 +5,26 @@
       <button type="button" class="btn btn-primary">إضافة</button>
     </a>
 
+
+    
+<!-- 
+    <div class="row">
+      <div class="col-md-12 mx-auto">
+        <div class="md-form">
+          <input
+            type="text"
+            [(ngModel)]="searchText"
+            class="form-control"
+            id="search"
+            
+          />
+          <label for="search">Search</label>
+        </div>
+      </div>
+    </div> -->
+
+
+
     <table class="table table-bordered mt-5 text-center">
       <thead>
         <tr bgcolor="gray">
